   artist, album, tracknumber, ~length, date) (PICARD-201)
 * Fixed AcoustID submission failure after removing files from Picard (PICARD-82)
 * Allow multi-select in new MetaDataBox for delete/remove tags (PICARD-194)
 * File browser remembers last directory/no longer crashes on OS X (PICARD-104)
 * Removed the "Run Picard" option from the Windows installer (PICARD-11)

Version 1.0 - 2012-06-02
 * New UI: Extended comparison of existing vs. MB metadata & tags (PICARD-43)
 * Merged the renaming and moving options pages
 * Removed the VA file naming format option (there is now a single format option) (PICARD-159)
 * Add %license% tag
 * Made %writer% available to tagger scripts and plugins with contents of songwriter (PICARD-21)
 * Allow two multi-valued variables to be merged in tagger scripting (PICARD-139)
 * Allow multi-valued variables to be transformed in tagger script and then set back in tags as multi-valued (PICARD-147)
 * Fix $copy not preserving multi-value variables as documented (PICARD-138)
 * Load/save free-text tags for ID3 as TXXX frames (PICARD-148)
 * Fix writing of MusicBrainz Work Id / musicbrainz_workid to tags (PICARD-88)
 * Handle mimetype for embedding cover art from EXIF jpegs (PICARD-27)
 * Change cover art box to open MusicBrainz release rather than Amazon
 * Support manual drag-and-drop of cover art onto a release via cover art box
 * Only open browser on left-click of cover art box (PICARD-190)
 * Fix Lookup in Browser (previously 'tag lookup') for clusters (PICARD-186)
 * Lookup in Browser will now not use MBIDs to lookup unmatched files/clusters
 * Add Date/Country to CD Lookup results dialog (PICARD-198)
 * Fix/reset album folksonomy tag counts while refreshing releases (PICARD-4)
 * Plugins actions can now create sub-menus using the MENU class attribute
 * New plugin hook register_clusterlist_action
 * Display the port Picard is listening on at bottom right status bar (PICARD-191)